# s3ec

./: .justfile  .vampus.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: release-prepare.yml  release.yml
contrib/: s3ec.service
src/: cli.rs  client.rs  config.rs  daemon.rs  error.rs  main.rs
