[package]
name = "s3ec"
version = "0.2.0"
edition = "2024"
description = "File sync daemon and CLI for an S3-compatible event server"
license = "MIT"
repository = "https://github.com/atareao/s3ec"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "6"
inotify = "0.11"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
toml = "0.8"
thiserror = "2"
mime_guess = "2"
filetime = "0.2"
urlencoding = "2"